testsuite/tests/checks/no_real_range/test.out
decls.ads:4:9: error: No_Explicit_Real_Range - rule violation
4 |    type Invalid1 is digits 8;                           --  FLAG
  |         ^^^^^^^^ 

decls.ads:5:9: error: No_Explicit_Real_Range - rule violation
5 |    type Invalid2 is delta 0.01 digits 8;                --  FLAG
  |         ^^^^^^^^ 

decls.ads:7:12: error: No_Explicit_Real_Range - rule violation
7 |    subtype InvalidSub is Invalid2;                      --  FLAG
  |            ^^^^^^^^^^ 

